--- a/app/src/main/res/layout/fragment_login_slide.xml
+++ b/app/src/main/res/layout/fragment_login_slide.xml
@@ -33,7 +33,7 @@
             android:layout_height="50dp"
             android:fontFamily="@font/montserrat"
             android:gravity="center"
-            android:hint="e-mail"
+            android:hint="nome de usuário"
             android:inputType="textEmailAddress" />
 
         <EditText
@@ -62,14 +62,6 @@
             android:textStyle="bold"
             android:visibility="visible"/>
 
-        <ProgressBar
-            android:id="@+id/fragment_login_progressBar"
-            style="?android:attr/progressBarStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@id/fragment_login_btnLogin"
-            android:layout_centerHorizontal="true"
-            android:visibility="invisible" />
 
     </RelativeLayout>
 
