--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,10 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="AppCompatAlertDialogStyle" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="colorAccent">#000</item>
+        <item name="android:fontFamily">@font/montserrat</item>
+        <item name="android:textColor">#000</item>
+        <item name="android:background">@color/colorAccent</item>
+    </style>
 </resources>
