--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,18 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="@dimen/toolbar_margin"
-    android:id="@+id/fragment_home_swiperefresh">
+    >
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:id="@+id/fragment_home_swiperefresh">
 
             <ListView
                 android:id="@+id/fragment_home_listaEventos"
@@ -34,9 +30,7 @@
                 android:fontFamily="@font/montserrat"
                 android:text="@string/ainda_n_o_h_eventos_para_serem_gerenciados_crie_um_agora"/>
 
-        </LinearLayout>
-
-    </ScrollView>
+        </android.support.v4.widget.SwipeRefreshLayout>
 
 
 
@@ -44,4 +38,6 @@
 
 
 
-</android.support.v4.widget.SwipeRefreshLayout>
+
+
+</LinearLayout>
