--- a/app/src/main/res/layout/lista_eventos_layout.xml
+++ b/app/src/main/res/layout/lista_eventos_layout.xml
@@ -1,7 +1,7 @@
 <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="280dp"
+    android:layout_height="wrap_content"
     app:cardUseCompatPadding="true"
     app:cardElevation="16dp"
     app:cardCornerRadius="6dp">
@@ -58,6 +58,7 @@
             android:background="@android:color/darker_gray"/>
 
         <LinearLayout
+            android:padding="10dp"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -65,6 +66,7 @@
             >
 
             <Button
+                android:id="@+id/btn_gerenciar"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:fontFamily="@font/montserrat"
@@ -73,6 +75,7 @@
                 android:textAllCaps="false" />
 
             <Button
+                android:id="@+id/btn_excluir"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_margin="2dp"
